--- a/package.json
+++ b/package.json
@@ -13,11 +13,15 @@
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.3.3",
     "animate.css": "^4.1.1",
     "bootstrap": "^5.3.3",
+    "framer-motion": "^11.0.20",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.1",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-in-viewport": "^1.0.0-alpha.30",
+    "resend": "^3.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.63",
